[metadata]
description-file = README.md
license_file = LICENSE.md

; [tool:pytest]
; addopts=--tb=short --strict-markers -ra

; [flake8]
; max-line-length = 120
; max-complexity = 10
; # ignore = E203, E266, E501, W503, F403, F401
; # See https://www.flake8rules.com/

; ; [isort]
; ; skip=.tox
; ; atomic=true
; ; multi_line_output=5
; ; extra_standard_library=types
; ; known_third_party=pytest,_pytest,django,pytz,uritemplate
; ; known_first_party=rest_framework,tests_rds_framework

; [coverage:run]
; # NOTE: source is ignored with pytest-cov (but uses the same).
; source = .
; include = dry/*,drytests/*
; branch = 1

; [coverage:report]
; include = dry/*,drytests/*
; exclude_lines =
;     pragma: no cover
;     raise NotImplementedError
